[package]
authors = ["Sean Leffler <sean@errno.com>"]
build = "build.rs"
name = "carthage"
version = "0.1.0"

[build-dependencies]
lalrpop = "0.14.0"
string_cache_codegen = "0.4"

[dependencies]
bitflags = "1.0.1"
failure = "0.1.1"
lalrpop-util = "0.14.0"
lazy_static = "1.0.0"
regex = "0.2.1"
string_cache = "0.7.1"
url = "1.7.0"
